--- a/style-rtl.scss
+++ b/style-rtl.scss
@@ -563,6 +563,83 @@ a{
         }
     }
 }
+.projectPageBack{
+    .mainView{
+        max-width: 1280px;
+        margin: auto;
+        color: white;
+        .singleBox{
+            max-width: 1100px;
+            margin: auto;
+            .mahtabproject{
+                text-align: center;
+                margin: 50px 0;
+                .swiper-pagination{
+                position: unset !important;
+                span{
+                    background: white;
+                    opacity: 100%;
+                }
+                .swiper-pagination-bullet-active{
+                    background: #cdb578;
+                }
+            }
+                .projetSwiperImg{
+                    height: 300px;
+                    border-radius: 10px;
+                    overflow: hidden;
+                    img{
+                        object-fit: cover;
+                    }
+                }
+                h1{
+                    color: #cdb578;
+                }
+            }
+            .descriptionProjectnOne{
+                h2{
+                    color: #cdb578;
+                    font-size: 20px;
+                }
+            }
+            .descriptionProjectTwo{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                .descriptionProjectClip{
+                    width: 64%;
+                    border-radius: 10px;
+                    overflow: hidden;
+                    img{
+                        display: block;
+                    }
+                }
+                .descriptionProjectText{
+                    h2{
+                        color: #cdb578;
+                        margin: 0;
+                    }
+                    h3{
+                        font-weight: 500; 
+                        font-size: 18px;  
+                        margin: 10px 0;                 
+                    }
+                    div{
+                        margin: 22px 0;
+                        p{
+                            font-size: 16px;
+                            font-weight: 300;
+                            margin: 0;
+                        }
+                    }
+                }
+             
+            }
+            
+
+        }
+    }
+}
 .mainFooterBack{
     background-color: #1e1e1e;
     padding: 50px 20px;
@@ -673,7 +750,7 @@ a{
         }
     }
     input[type="tel"] {
-        background-color:#1e1e1e ;
+        background-color:transparent ;
         direction: rtl;
         padding: 10px 7px;
         border: none;
@@ -691,7 +768,7 @@ a{
         outline: none;
     }
     input[type="submit"] {
-        background-color:#1e1e1e ;
+        background-color:transparent ;
         border: none;
         color: #1e1e1e;
         font-size: 18px;
