--- a/style-rtl.css
+++ b/style-rtl.css
@@ -170,7 +170,7 @@ a {
 .homePageBack .mainHome .mainHomeIntroSectionParent .mainHomeIntroInnerTitle .mainHomeIntroInnerButtom div span {
   display: flex;
   align-items: center;
-  margin-right: 5px;
+  margin-right: 7px;
   transition: 0.3s;
   cursor: pointer;
 }
@@ -198,13 +198,15 @@ a {
 }
 .homePageBack .mainHome .mainHomeIntroSectionParent .mainHomeIntroInnerImg .counterNumbersInner .counterNumber {
   text-align: center;
-  font-size: 33px;
+  font-size: 40px;
   font-weight: 900;
   margin: 0;
   color: #cdb578;
+  padding: 0;
 }
 .homePageBack .mainHome .mainHomeIntroSectionParent .mainHomeIntroInnerImg .counterNumbersInner .counterTitle {
   margin: 0;
+  padding: 0;
 }
 .homePageBack .mainHome .mainHomeOurServices {
   padding: 150px 0;
@@ -259,8 +261,8 @@ a {
 .homePageBack .mainHome .mainHomeOurServices .mainHomeOurServicesCards .mainHomeOurServicesCard p {
   margin: 0;
   padding: 0 30px;
-  font-size: 14px;
-  font-weight: 100;
+  font-size: 13px;
+  font-weight: 300;
 }
 .homePageBack .mainHome .mainHomeVrfServices {
   display: flex;
@@ -354,6 +356,7 @@ a {
   font-size: 25px;
   font-weight: 500;
   cursor: pointer;
+  margin: 0;
 }
 .homePageBack .mainHome .mainHomeOurProject .mainHomeOurProjectCards .mainHomeOurProjectCard .homeInnerProjectCardText span {
   position: absolute;
@@ -375,7 +378,7 @@ a {
   width: 100%;
   height: 70%;
   position: absolute;
-  top: 55%;
+  top: 58%;
   right: 0;
   background: linear-gradient(rgba(0, 0, 0, 0), rgb(0, 0, 0));
   display: flex;
@@ -386,11 +389,12 @@ a {
 .homePageBack .mainHome .mainHomeOurProject .mainHomeOurProjectCards .mainHomeOurProjectCard .homeInnerProjectCardText .homeInnerProjectCardGradient p {
   padding: 0 20px;
   cursor: pointer;
-  font-size: 14px;
-  font-weight: 100;
+  font-size: 13px;
+  font-weight: 300;
+  padding-bottom: 40PX;
 }
 .homePageBack .mainHome .mainHomeOurProject .mainHomeOurProjectCards .mainHomeOurProjectCard:hover .homeInnerProjectCardGradient {
-  top: 30% !important;
+  top: 35% !important;
 }
 .homePageBack .mainHome .mainHomeOurProject .mainHomeOurProjectCards .mainHomeOurProjectCard:hover {
   transform: translateY(-20px);
@@ -874,4 +878,7 @@ a {
   position: absolute;
   top: 11px;
   left: 23%;
+}
+.mainFooterBack .bottomFormSvg svg {
+  margin-left: 15px;
 }/*# sourceMappingURL=style-rtl.css.map */
