--- a/style-rtl.scss
+++ b/style-rtl.scss
@@ -132,7 +132,7 @@ a{
                 span{
                     display: flex;
                     align-items: center;
-                    margin-right: 5px;
+                    margin-right: 7px;
                     transition: .3s;
                     cursor: pointer;
                 }
@@ -161,13 +161,15 @@ a{
                 }
                 .counterNumber{
                     text-align: center;
-                  font-size: 33px;
+                  font-size: 40px;
                   font-weight: 900;
                   margin: 0;
                   color: #cdb578;
+                  padding: 0;
                 }
                 .counterTitle{
                     margin: 0;
+                    padding: 0;
                 }
               }
             }
@@ -222,8 +224,8 @@ a{
                 p{
                     margin: 0;
                     padding: 0 30px;
-                    font-size: 14px;
-                    font-weight: 100;
+                    font-size: 13px;
+                    font-weight: 300;
                 }
                 }
             }
@@ -317,6 +319,7 @@ a{
                             font-size: 25px;
                             font-weight: 500;
                             cursor: pointer;
+                            margin:  0;
                         }
                         span{
                             position: absolute;
@@ -338,7 +341,7 @@ a{
                             width: 100%;
                             height: 70%;
                             position: absolute;
-                            top: 55%;
+                            top: 58%;
                             right: 0;
                             background: linear-gradient(rgba(0, 0, 0, 0),rgb(0, 0, 0));
                             display: flex;
@@ -348,15 +351,15 @@ a{
                             p{
                                 padding: 0 20px;
                                 cursor: pointer;
-                                font-size: 14px;
-                                font-weight: 100;
+                                font-size: 13px;
+                                font-weight: 300;
+                                padding-bottom:40PX ;
                             }
                             
                         }
                     }
                     &:hover .homeInnerProjectCardGradient {
-                        top: 30% !important;
-    
+                        top: 35% !important;
                     }
                     &:hover {
                         transform: translateY(-20px);
@@ -835,6 +838,11 @@ a{
             position: absolute;
             top: 11px;
             left: 23%;
+        }
+    }
+    .bottomFormSvg{
+        svg{
+            margin-left: 15px;
         }
     }
 }
